--- a/templates/home.html
+++ b/templates/home.html
@@ -34,10 +34,8 @@
                     <a class="nav-link" href="/faq">FAQ</a>
                 </li>
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+                <a class="btn btn-outline-success mx-2" href="/log-in">Log In</a>
+            <a class="btn btn-outline-primary" href="sign-up">Sign Up</a>
         </div>
     </div>
 </nav>
