--- a/templates/new-sign-up.html
+++ b/templates/new-sign-up.html
@@ -10,7 +10,6 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="static/css/style.css" rel="stylesheet" type="text/css" />
-    <script src="https://kit.fontawesome.com/e0d3d9f1f6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -49,37 +48,46 @@
                                 <p class="text-center h1 fw-bold mb-3 mx-1 mx-md-4">Sign up</p>
                                 <form class="mx-1 mx-md-4">
 
-                                    <div class="d-flex flex-row align-items-center mb-4 input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon1" style="font-size: 24px"><i class="fa-solid fa-user"></i></span>
-                                        <input type="text" id="username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="text" id="username" class="form-control" />
+                                            <label class="form-label" for="username">Username</label>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="email" id="email" class="form-control" />
+                                            <label class="form-label" for="email">Your Email</label>
+                                        </div>
                                     </div>
 
-                                    <div class="d-flex flex-row align-items-center mb-4 input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon2" style="font-size: 24px"><i class="fa-solid fa-envelope"></i></span>
-                                        <input type="text" id="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="basic-addon2">
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="password" id="password" class="form-control" />
+                                            <label class="form-label" for="password">Password</label>
+                                        </div>
                                     </div>
 
-                                    <div class="d-flex flex-row align-items-center mb-4 input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon3" style="font-size: 24px"><i class="fa-solid fa-lock"></i></span>
-                                        <input type="password" id="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon3">
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="password" id="password_verify" class="form-control" />
+                                            <label class="form-label" for="password_verify">Repeat your password</label>
+                                        </div>
                                     </div>
 
+                                    <!--                                    Uncomment for terms of service checkbox!-->
+                                    <!--                                    <div class="form-check d-flex justify-content-center mb-5">-->
+                                    <!--                                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />-->
+                                    <!--                                        <label class="form-check-label" for="form2Example3c">-->
+                                    <!--                                            I agree all statements in <a href="#!">Terms of service</a>-->
+                                    <!--                                        </label>-->
+                                    <!--                                    </div>-->
 
-                                    <div class="d-flex flex-row align-items-center mb-4 input-group mb-3">
-                                        <span class="input-group-text" id="basic-addon4" style="font-size: 24px"><i class="fa-solid fa-key"></i></span>
-                                        <input type="password" id="password_verify" class="form-control" placeholder="Verify Password" aria-label="Verify Password" aria-describedby="basic-addon4">
-                                    </div>
-
-
-<!--                                    Uncomment for terms of service checkbox!-->
-<!--                                    <div class="form-check d-flex justify-content-center mb-5">-->
-<!--                                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />-->
-<!--                                        <label class="form-check-label" for="form2Example3c">-->
-<!--                                            I agree all statements in <a href="#!">Terms of service</a>-->
-<!--                                        </label>-->
-<!--                                    </div>-->
-
-                                    <div class="d-flex">
+                                    <div class="d-flex justify-content-center">
                                         <button type="button" class="btn btn-primary btn-lg" onclick="register()">Register</button>
                                     </div>
 
